src/main/java/dk/njit/cs684/quote/grammar/QuoteBotParser.java
// Generated from QuoteBot.g4 by ANTLR 4.8

package dk.njit.cs684.quote.grammar;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class QuoteBotParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, W_TODAY=2, HOWMUCHISWAS=3, WHATISWAS=4, THEPRICEOF=5, RIGHTNOW=6, 
		W_BETWEEN=7, BETWEEN_SYMBOL=8, W_ON=9, STATS=10, SEARCH=11, SPREADSHEET=12, 
		NUMBER=13, YEAR=14, DIGIT=15, ISO_DATE=16, AMERICAN_DATE=17, AMERICAN_SHORT_DATE=18, 
		ANYMONTH=19, MONTH3=20, MONTH=21, W_MAY=22, W_LAST=23, DAY_OF_WEEK=24, 
		W_AGO=25, W_DAY=26, W_YESTERDAY=27, W_MONTH=28, W_WEEK=29, W_YEAR=30, 
		ORDINAL_SUFFIX=31, TEXTUAL_NUMBER=32, TEXTUAL_ONES_NUMBER=33, TEXTUAL_TENS_NUMBER=34, 
		W_ONE=35, W_TWO=36, W_THREE=37, W_FOUR=38, W_FIVE=39, W_SIX=40, W_SEVEN=41, 
		W_EIGHT=42, W_NINE=43, W_TEN=44, W_ELEVEN=45, W_TWELVE=46, W_THIRTEEN=47, 
		W_FOURTEEN=48, W_FIFTEEN=49, W_SIXTEEN=50, W_SEVENTEEN=51, W_EIGHTTEEN=52, 
		W_NINETEEN=53, W_TWENTY=54, W_THIRTY=55, W_FOURTY=56, W_FIFTY=57, W_SIXTY=58, 
		W_SEVENTY=59, W_EIGHTY=60, W_NINETY=61, W_TEEN=62, W_TY=63, SPACE=64, 
		QUESTION=65, IDENTIFIER=66;
	public static final int
		RULE_stockQuoteQuery = 0, RULE_historicalStockQuoteQuery = 1, RULE_rangedStockQuoteQuery = 2, 
		RULE_stockStatisticsQuery = 3, RULE_stockSearchQuery = 4, RULE_stockSpreadsheetQuery = 5, 
		RULE_onAnyDate = 6, RULE_anyDate = 7, RULE_cuteDate = 8, RULE_relativeDate = 9, 
		RULE_relativeDay = 10, RULE_relativeWeek = 11, RULE_relativeMonth = 12, 
		RULE_relativeYear = 13, RULE_instantDaysAgo = 14, RULE_instantWeeksAgo = 15, 
		RULE_instantMonthsAgo = 16, RULE_instantYearsAgo = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"stockQuoteQuery", "historicalStockQuoteQuery", "rangedStockQuoteQuery", 
			"stockStatisticsQuery", "stockSearchQuery", "stockSpreadsheetQuery", 
			"onAnyDate", "anyDate", "cuteDate", "relativeDate", "relativeDay", "relativeWeek", 
			"relativeMonth", "relativeYear", "instantDaysAgo", "instantWeeksAgo", 
			"instantMonthsAgo", "instantYearsAgo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'of'", null, null, null, null, null, null, null, "'on'", null, 
			null, null, null, null, null, null, null, null, null, null, null, "'may'", 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'one'", "'two'", null, null, null, null, null, null, "'nine'", "'ten'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "W_TODAY", "HOWMUCHISWAS", "WHATISWAS", "THEPRICEOF", "RIGHTNOW", 
			"W_BETWEEN", "BETWEEN_SYMBOL", "W_ON", "STATS", "SEARCH", "SPREADSHEET", 
			"NUMBER", "YEAR", "DIGIT", "ISO_DATE", "AMERICAN_DATE", "AMERICAN_SHORT_DATE", 
			"ANYMONTH", "MONTH3", "MONTH", "W_MAY", "W_LAST", "DAY_OF_WEEK", "W_AGO", 
			"W_DAY", "W_YESTERDAY", "W_MONTH", "W_WEEK", "W_YEAR", "ORDINAL_SUFFIX", 
			"TEXTUAL_NUMBER", "TEXTUAL_ONES_NUMBER", "TEXTUAL_TENS_NUMBER", "W_ONE", 
			"W_TWO", "W_THREE", "W_FOUR", "W_FIVE", "W_SIX", "W_SEVEN", "W_EIGHT", 
			"W_NINE", "W_TEN", "W_ELEVEN", "W_TWELVE", "W_THIRTEEN", "W_FOURTEEN", 
			"W_FIFTEEN", "W_SIXTEEN", "W_SEVENTEEN", "W_EIGHTTEEN", "W_NINETEEN", 
			"W_TWENTY", "W_THIRTY", "W_FOURTY", "W_FIFTY", "W_SIXTY", "W_SEVENTY", 
			"W_EIGHTY", "W_NINETY", "W_TEEN", "W_TY", "SPACE", "QUESTION", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "QuoteBot.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public QuoteBotParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StockQuoteQueryContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(QuoteBotParser.IDENTIFIER, 0); }
		public TerminalNode EOF() { return getToken(QuoteBotParser.EOF, 0); }
		public List<TerminalNode> SPACE() { return getTokens(QuoteBotParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(QuoteBotParser.SPACE, i);
		}
		public TerminalNode THEPRICEOF() { return getToken(QuoteBotParser.THEPRICEOF, 0); }
		public TerminalNode QUESTION() { return getToken(QuoteBotParser.QUESTION, 0); }
		public TerminalNode HOWMUCHISWAS() { return getToken(QuoteBotParser.HOWMUCHISWAS, 0); }
		public TerminalNode WHATISWAS() { return getToken(QuoteBotParser.WHATISWAS, 0); }
		public TerminalNode W_TODAY() { return getToken(QuoteBotParser.W_TODAY, 0); }
		public TerminalNode RIGHTNOW() { return getToken(QuoteBotParser.RIGHTNOW, 0); }
		public StockQuoteQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stockQuoteQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuoteBotListener ) ((QuoteBotListener)listener).enterStockQuoteQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuoteBotListener ) ((QuoteBotListener)listener).exitStockQuoteQuery(this);
		}
	}

	public final StockQuoteQueryContext stockQuoteQuery() throws RecognitionException {
		StockQuoteQueryContext _localctx = new StockQuoteQueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_stockQuoteQuery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HOWMUCHISWAS || _la==WHATISWAS) {
				{
				setState(36);
				_la = _input.LA(1);
				if ( !(_la==HOWMUCHISWAS || _la==WHATISWAS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(37);
				match(SPACE);
				}
			}

			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==THEPRICEOF) {
				{
				setState(40);
				match(THEPRICEOF);
				setState(41);
				match(SPACE);
				}
			}

			setState(44);
			match(IDENTIFIER);
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(45);
				match(SPACE);
				setState(46);
				_la = _input.LA(1);
				if ( !(_la==W_TODAY || _la==RIGHTNOW) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==QUESTION) {
				{
				setState(49);
				match(QUESTION);
				}
			}

			setState(52);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HistoricalStockQuoteQueryContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(QuoteBotParser.IDENTIFIER, 0); }
		public List<TerminalNode> SPACE() { return getTokens(QuoteBotParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(QuoteBotParser.SPACE, i);
		}
		public OnAnyDateContext onAnyDate() {
			return getRuleContext(OnAnyDateContext.class,0);
		}
		public TerminalNode EOF() { return getToken(QuoteBotParser.EOF, 0); }
		public TerminalNode THEPRICEOF() { return getToken(QuoteBotParser.THEPRICEOF, 0); }
		public TerminalNode QUESTION() { return getToken(QuoteBotParser.QUESTION, 0); }
		public TerminalNode HOWMUCHISWAS() { return getToken(QuoteBotParser.HOWMUCHISWAS, 0); }
		public TerminalNode WHATISWAS() { return getToken(QuoteBotParser.WHATISWAS, 0); }
		public HistoricalStockQuoteQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_historicalStockQuoteQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuoteBotListener ) ((QuoteBotListener)listener).enterHistoricalStockQuoteQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuoteBotListener ) ((QuoteBotListener)listener).exitHistoricalStockQuoteQuery(this);
		}
	}

	public final HistoricalStockQuoteQueryContext historicalStockQuoteQuery() throws RecognitionException {
		HistoricalStockQuoteQueryContext _localctx = new HistoricalStockQuoteQueryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_historicalStockQuoteQuery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HOWMUCHISWAS || _la==WHATISWAS) {
				{
				setState(54);
				_la = _input.LA(1);
				if ( !(_la==HOWMUCHISWAS || _la==WHATISWAS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==THEPRICEOF) {
				{
				setState(57);
				match(THEPRICEOF);
				setState(58);
				match(SPACE);
				}
			}

			setState(61);
			match(IDENTIFIER);
			setState(62);
			match(SPACE);
			setState(63);
			onAnyDate();
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==QUESTION) {
				{
				setState(64);
				match(QUESTION);
				}
			}

			setState(67);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RangedStockQuoteQueryContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(QuoteBotParser.IDENTIFIER, 0); }
		public List<TerminalNode> SPACE() { return getTokens(QuoteBotParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(QuoteBotParser.SPACE, i);
		}
		public List<AnyDateContext> anyDate() {
			return getRuleContexts(AnyDateContext.class);
		}
		public AnyDateContext anyDate(int i) {
			return getRuleContext(AnyDateContext.class,i);
		}
		public TerminalNode BETWEEN_SYMBOL() { return getToken(QuoteBotParser.BETWEEN_SYMBOL, 0); }
		public TerminalNode EOF() { return getToken(QuoteBotParser.EOF, 0); }
		public TerminalNode THEPRICEOF() { return getToken(QuoteBotParser.THEPRICEOF, 0); }
		public TerminalNode W_BETWEEN() { return getToken(QuoteBotParser.W_BETWEEN, 0); }
		public TerminalNode QUESTION() { return getToken(QuoteBotParser.QUESTION, 0); }
		public TerminalNode HOWMUCHISWAS() { return getToken(QuoteBotParser.HOWMUCHISWAS, 0); }
		public TerminalNode WHATISWAS() { return getToken(QuoteBotParser.WHATISWAS, 0); }
		public RangedStockQuoteQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rangedStockQuoteQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuoteBotListener ) ((QuoteBotListener)listener).enterRangedStockQuoteQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuoteBotListener ) ((QuoteBotListener)listener).exitRangedStockQuoteQuery(this);
		}
	}

	public final RangedStockQuoteQueryContext rangedStockQuoteQuery() throws RecognitionException {
		RangedStockQuoteQueryContext _localctx = new RangedStockQuoteQueryContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_rangedStockQuoteQuery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HOWMUCHISWAS || _la==WHATISWAS) {
				{
				setState(69);
				_la = _input.LA(1);
				if ( !(_la==HOWMUCHISWAS || _la==WHATISWAS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==THEPRICEOF) {
				{
				setState(72);
				match(THEPRICEOF);
				setState(73);
				match(SPACE);
				}
			}

			setState(76);
			match(IDENTIFIER);
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(77);
				match(SPACE);
				setState(78);
				match(W_BETWEEN);
				}
				break;
			}
			setState(81);
			match(SPACE);
			setState(82);
			anyDate();
			setState(83);
			match(BETWEEN_SYMBOL);
			setState(84);
			anyDate();
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==QUESTION) {
				{
				setState(85);
				match(QUESTION);
				}
			}

			setState(88);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StockStatisticsQueryContext extends ParserRuleContext {
		public TerminalNode STATS() { return getToken(QuoteBotParser.STATS, 0); }
		public TerminalNode SPACE() { return getToken(QuoteBotParser.SPACE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(QuoteBotParser.IDENTIFIER, 0); }
		public TerminalNode QUESTION() { return getToken(QuoteBotParser.QUESTION, 0); }
		public StockStatisticsQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stockStatisticsQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuoteBotListener ) ((QuoteBotListener)listener).enterStockStatisticsQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuoteBotListener ) ((QuoteBotListener)listener).exitStockStatisticsQuery(this);
		}
	}

	public final StockStatisticsQueryContext stockStatisticsQuery() throws RecognitionException {
		StockStatisticsQueryContext _localctx = new StockStatisticsQueryContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stockStatisticsQuery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(STATS);
			setState(91);
			match(SPACE);
			setState(92);
			match(IDENTIFIER);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==QUESTION) {
				{
				setState(93);
				match(QUESTION);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StockSearchQueryContext extends ParserRuleContext {
		public TerminalNode SEARCH() { return getToken(QuoteBotParser.SEARCH, 0); }
		public TerminalNode SPACE() { return getToken(QuoteBotParser.SPACE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(QuoteBotParser.IDENTIFIER, 0); }
		public TerminalNode QUESTION() { return getToken(QuoteBotParser.QUESTION, 0); }
		public StockSearchQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stockSearchQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuoteBotListener ) ((QuoteBotListener)listener).enterStockSearchQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuoteBotListener ) ((QuoteBotListener)listener).exitStockSearchQuery(this);
		}
	}

	public final StockSearchQueryContext stockSearchQuery() throws RecognitionException {
		StockSearchQueryContext _localctx = new StockSearchQueryContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stockSearchQuery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(SEARCH);
			setState(97);
			match(SPACE);
			setState(98);
			match(IDENTIFIER);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==QUESTION) {
				{
				setState(99);
				match(QUESTION);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StockSpreadsheetQueryContext extends ParserRuleContext {
		public TerminalNode SPREADSHEET() { return getToken(QuoteBotParser.SPREADSHEET, 0); }
		public TerminalNode SPACE() { return getToken(QuoteBotParser.SPACE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(QuoteBotParser.IDENTIFIER, 0); }
		public TerminalNode QUESTION() { return getToken(QuoteBotParser.QUESTION, 0); }
		public StockSpreadsheetQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stockSpreadsheetQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuoteBotListener ) ((QuoteBotListener)listener).enterStockSpreadsheetQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuoteBotListener ) ((QuoteBotListener)listener).exitStockSpreadsheetQuery(this);
		}
	}

	public final StockSpreadsheetQueryContext stockSpreadsheetQuery() throws RecognitionException {
		StockSpreadsheetQueryContext _localctx = new StockSpreadsheetQueryContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_stockSpreadsheetQuery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(SPREADSHEET);
			setState(103);
			match(SPACE);
			setState(104);
			match(IDENTIFIER);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==QUESTION) {
				{
				setState(105);
				match(QUESTION);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OnAnyDateContext extends ParserRuleContext {
		public AnyDateContext anyDate() {
			return getRuleContext(AnyDateContext.class,0);
		}
		public TerminalNode W_ON() { return getToken(QuoteBotParser.W_ON, 0); }
		public OnAnyDateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_onAnyDate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuoteBotListener ) ((QuoteBotListener)listener).enterOnAnyDate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuoteBotListener ) ((QuoteBotListener)listener).exitOnAnyDate(this);
		}
	}

	public final OnAnyDateContext onAnyDate() throws RecognitionException {
		OnAnyDateContext _localctx = new OnAnyDateContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_onAnyDate);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==W_ON) {
				{
				setState(108);
				match(W_ON);
				}
			}

			setState(111);
			anyDate();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnyDateContext extends ParserRuleContext {
		public TerminalNode ISO_DATE() { return getToken(QuoteBotParser.ISO_DATE, 0); }
		public TerminalNode AMERICAN_DATE() { return getToken(QuoteBotParser.AMERICAN_DATE, 0); }
		public TerminalNode AMERICAN_SHORT_DATE() { return getToken(QuoteBotParser.AMERICAN_SHORT_DATE, 0); }
		public CuteDateContext cuteDate() {
			return getRuleContext(CuteDateContext.class,0);
		}
		public RelativeDateContext relativeDate() {
			return getRuleContext(RelativeDateContext.class,0);
		}
		public AnyDateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anyDate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuoteBotListener ) ((QuoteBotListener)listener).enterAnyDate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuoteBotListener ) ((QuoteBotListener)listener).exitAnyDate(this);
		}
	}

	public final AnyDateContext anyDate() throws RecognitionException {
		AnyDateContext _localctx = new AnyDateContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_anyDate);
		try {
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ISO_DATE:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				match(ISO_DATE);
				}
				break;
			case AMERICAN_DATE:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				match(AMERICAN_DATE);
				}
				break;
			case AMERICAN_SHORT_DATE:
				enterOuterAlt(_localctx, 3);
				{
				setState(115);
				match(AMERICAN_SHORT_DATE);
				}
				break;
			case ANYMONTH:
				enterOuterAlt(_localctx, 4);
				{
				setState(116);
				cuteDate();
				}
				break;
			case W_TODAY:
			case NUMBER:
			case W_LAST:
			case DAY_OF_WEEK:
			case W_YESTERDAY:
				enterOuterAlt(_localctx, 5);
				{
				setState(117);
				relativeDate();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
